--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -521,16 +521,16 @@ header {
     width: 100%;
     display: none;
     padding: 0 10px;
+}
 
-    &.active {
-        display: block;
-        animation: fadeIn 0.5s ease-in-out;
-    }
+.project-slide.active {
+    display: block;
+    animation: fadeIn 0.5s ease-in-out;
+}
 
-    @keyframes fadeIn {
-        from { opacity: 0;}
-        to { opacity: 1;}
-    }
+@keyframes fadeIn {
+    from { opacity: 0;}
+    to { opacity: 1;}
 }
 
 /* Carousel Navigation */
