--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -439,21 +439,25 @@ header {
     }
 }
 
-.project-thubmnail {
+.project-thumbnail {
+    width: 100%;
     height: 200px;
     overflow: hidden;
-
+    border: 1px solid #ccc;
+}
     img {
         width: 100%;
         height: 100%;
         object-fit: cover;
-        transition:  transform 0.5s ease;
-
-        &:hover {
-            transform: scale(1.05);
-        }
+        object-position: top;
+        display: block;
+        transition:  transform 1s ease;
     }
-}
+
+    &:hover {
+        transform: scale(1.05);
+    }
+
 
 .project-info {
     padding: 20px;
