--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -446,11 +446,13 @@ header {
     border: 1px solid #ccc;
 }
     img {
-        width: 100%;
-        height: 100%;
+        width: 300px;
+        height: 300px;
         object-fit: cover;
         object-position: top;
         display: block;
+        margin: 0 auto;
+        align-self: center;
         transition:  transform 1s ease;
     }
 
