--- a/css/index_eng.css
+++ b/css/index_eng.css
@@ -625,7 +625,7 @@ header {
 .contact-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     gap: 2rem;
 }
 
@@ -638,8 +638,9 @@ header {
 
 .contact-item img {
     width: 40px;
+    height: 40px;
     margin-bottom: 0.5rem;
-    filter: brightness(0) invert(1);
+    /* filter: brightness(0) invert(1); */
 }
 
 .contact-item a {
